navbar collapse to icon again fix

--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -96,7 +96,8 @@
         /* margin-top: 4em; */
         border: none;
         padding: 0;
-        margin: 3.5em 0 0 0;
+        margin: 3.75em 0 0 0;
+        z-index: 9999;
     }
     .searchInput{
         width: 100%;
